sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: value by
  for (i<- n-1 to 0) by -1{
                     ^AlgBubbleSort1:4: error: Int(1) does not take parameters
  for (i<- n-1 to 0) by -1{
                          ^